[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools = "0.12.0"
reqwest = { version="0.11.13", features = ["blocking"] }
regex = "1.7.0"
rayon = "1.6.1"
ahash = "0.8.2"
anyhow = "1.0.75"
num = "0.4.1"
z3 = "0.12.1"
[profile.release]
opt-level = 3
